# agentic-utilities

./: .coderabbit.yaml  .gitignore  .gitleaks.local.toml.example  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  biome.json  package-lock.json  package.json  skills.sh.json  tsconfig.json
.claude-plugin/: marketplace.json
.codegraph/: .gitignore  codegraph.db
.github/workflows/: ci.yml
.husky/: pre-commit
.pi/: settings.json
.pi/autopilot/: checks.yml  config.yml
bws-tui/: Cargo.toml  README.md
bws-tui/docs/assets/: hush-demo.tape
bws-tui/docs/demo/: bws
bws-tui/src/: bws.rs  commands.rs  main.rs  tui.rs
bws-tui/src/tui/: actions.rs  chrome.rs  events.rs  forms.rs  render.rs  secrets.rs  terminal.rs  tests.rs
claude-code/: README.md
docs/: autopilot.md  catalog.md  conventions.md  garbage-collection.md  publishing.md  question-user-testing.md
docs/adr/: 0001-harness-isolated-skill-inventories.md
extensions/: adversarial-review.ts  anti-hedging.ts  question.ts  todos.ts  web-tools.ts
prompts/: README.md  critical-bug-hunt.prompt.md
rules/: extensions.md  global-skills.md  identity-verification.md  package-resources.md
scripts/: cli-entrypoint-test.mjs  install-bash-guard-global.mjs  list-resources.mjs  new-extension.mjs  new-skill.mjs  validate-agent-skills.mjs  validate-codex-plugins.mjs  validate-lockfile.mjs  validate-lockfile.test.mjs  validate-package-contents.mjs  validate-plugin-ports.mjs
skills/: README.md
subagents/: extension-risk-review.md  package-context.md  web-tools-parse-review.md
themes/: README.md
(+382 files in other folders)
