[package]
name = "bws-tui"
version = "0.0.3"
edition = "2021"
autobins = false
description = "Interactive TUI and script-friendly CLI wrapper around the Bitwarden Secrets Manager `bws` CLI"
license = "MIT"
repository = "https://github.com/AojdevStudio/agentic-utilities"
keywords = ["bitwarden", "secrets-manager", "tui", "cli", "bws"]
categories = ["command-line-utilities"]

[[bin]]
name = "hush"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
zeroize = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arboard = "3"
